--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "unplugin-vue-macros": "^2.0.0",
     "vite": "^4.2.1",
     "vite-plugin-pages": "^0.29.0",
+    "vite-plugin-pages-sitemap": "^1.4.5",
     "vitest": "^0.29.8",
     "vue-tsc": "^1.3.8"
   },
