--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.4",
     "@iconify-json/carbon": "^1.1.16",
+    "@iconify-json/flag": "^1.1.31",
     "@types/node": "^18.15.11",
     "@unocss/reset": "^0.50.6",
     "@vitejs/plugin-vue": "^4.1.0",
